--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -226,6 +226,7 @@ div.main {
   right: 0;
   user-select: none;
   visibility: hidden;
+  z-index: 20;
 }
 
 #snackC {
